fix the paragraph tag aligning center on really big screens

--- a/pages/rochester/wcc/wwc.module.scss
+++ b/pages/rochester/wcc/wwc.module.scss
@@ -5,6 +5,7 @@
     padding: 20px;
     > p {
         color: darkgray;
+        width: 100%;
     }
     .sponsors {
         display: flex;
